More changes to hopefully fix spacing issue on items
I am using both marker AND list style type. It seems on desktop, list style type bakes in an additional space on desktop where marker doesn;t, HOWEVER, marker (despite it saying it should work on at least chrome on mobile but maybe i'm mistaken), but list style type DOES work, so I am using both and making sure marker is after

--- a/src/styles/test.css
+++ b/src/styles/test.css
@@ -117,13 +117,13 @@
 	list-style-position: inside;
 }
 
-/* .contact-section-list-item{
+.contact-section-list-item{
 	list-style-type: "> ";
 }
 
 .skills-section-list-item{
 	list-style-type: "­­­­­­­­­­­­▪­­­­­­­ ­";
-} */
+}
 
 .skills-section-list-item::marker { 
 	content: "▪"; 
@@ -162,6 +162,10 @@
 	margin: -0.2em calc(-0.55em + 2ch);
 }
 
+.contact-section-list-item:has(.contact-section-link:hover)
+.contact-section-list-item:has(.contact-section-link:focus){
+	list-style-type: "< ";
+}
 
 .contact-section-list-item:has(.contact-section-link:hover)::marker,
 .contact-section-list-item:has(.contact-section-link:focus)::marker{
